--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,15 +27,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: ./github-actions.sh
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo What is in the current directory.
-          ls -a
-          echo
-          echo Is java installed
-          java -version
-          echo Is git installed
-          git --version
+          echo Check Single Line command runs.
