--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,16 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      
+      - name: build maven project
+        run: mvn -B package --file pom.xml
+
+      - name: create cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{runner.os}}-m2-${{hashFiles('**/pom.xml')}}
+          restore-keys: ${{runner.os}}-m2
+            
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: sh ./github-actions.sh
